--- a/requirements.txt
+++ b/requirements.txt
@@ -2,19 +2,19 @@ bandit[toml]==1.7.8
 black[jupyter]==24.4.2
 click==8.1.7
 coverage==7.5.3
+datasets==2.19.2
 einops==0.8.0
 isort[colors]==5.13.2
 mypy==1.10.0
 numpy==1.23.5
-openai-whisper==20231117
+pulsectl==24.4.0
 PyAudio==0.2.14
-pydantic-core==2.18.4
+pydantic==2.7.3
 pydantic-settings==2.3.1
 pylint==3.2.2
 pytest==8.2.2
 PyQt5==5.15.10
 PyQt5-stubs==5.15.6.0
-scipy==1.13.1
+sentencepiece==0.2.0
 torch==2.3.1
 transformers==4.41.2
-TTS==0.14.3
