--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==0.30.1
 bandit[toml]==1.7.8
 black[jupyter]==24.4.2
 click==8.1.7
@@ -9,7 +10,6 @@ mypy==1.10.0
 numpy==1.23.5
 pulsectl==24.4.0
 PyAudio==0.2.14
-pydantic==2.7.3
 pydantic-settings==2.3.1
 pylint==3.2.2
 pytest==8.2.2
