--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,13 @@ accelerate==0.30.1
 bandit[toml]==1.7.8
 black[jupyter]==24.4.2
 click==8.1.7
+colorama==0.4.6
 coverage==7.5.3
 datasets==2.19.2
 einops==0.8.0
 isort[colors]==5.13.2
 mypy==1.10.0
 numpy==1.23.5
-pulsectl==24.4.0
 PyAudio==0.2.14
 pydantic-settings==2.3.1
 pylint==3.2.2
