--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-bandit[toml]==1.7.8
-black[jupyter]==24.4.2
-coverage==7.5.3
-isort[colors]==5.13.2
-mypy==1.10.0
-pylint==3.2.2
-pytest==8.2.2
+click>=8.1.7
+colorama>=0.4.6
+coqui-tts>=0.24.1
+numpy>=1.26.4
+ollama>=0.2.1
+PyAudio>=0.2.14
+pydantic-settings>=2.3.1
+pygame>=2.5.2
+transformers>=4.40.2
